# GuangzhouOpenWorld

./: .gitignore  CONFIGURATION_REPORT.md  GuangzhouOpenWorld.uproject  README.md  changed_files.md
.github/workflows/: linux-headless.yml
Config/: DefaultEditor.ini  DefaultEngine.ini  DefaultGame.ini  DefaultInput.ini
Config/Mac/: MacEngine.ini
Content/Data/: README.md
Content/Maps/: README.md
Docs/: 4A_STANDARDS_CHECKLIST.md  5Y_OPTIMIZATION_SUMMARY.md  ENGINE_STRATEGY.md  M2_PREP_CHECKLIST.md  M2_RUNBOOK.md  PROJECT_ARCHITECTURE.md  REALITY_STATUS.md  ROADMAP_3A.md  STORY_BIBLE.md  TECH_STACK_FREE.md
Docs/Data/: GUANGZHOU_DISTRICTS.md  district_id_map.json  missions_act1.json  missions_act2.json
Docs/OptimizationLogs/: OptimizationLog_000001.txt  OptimizationLog_000002.txt  OptimizationLog_000003.txt  OptimizationLog_000004.txt  OptimizationLog_000005.txt  OptimizationLog_000006.txt  OptimizationLog_000007.txt  OptimizationLog_000008.txt  OptimizationLog_000009.txt  OptimizationLog_000010.txt  OptimizationLog_000011.txt  OptimizationLog_000018.txt  OptimizationLog_000019.txt  OptimizationLog_000020.txt  OptimizationReport_Gameplay_v1.json
Docs/handoff/: HANDOFF.md
MacApp/: Package.swift
MacApp/Sources/GZSparkBridge/: MetalTextureBridge.swift  SparkRenderView.swift  SparkRenderer.swift
MacApp/Sources/GuangzhouOpenWorldApp/: AppState.swift  GameContainerView.swift  GameMainUI.swift  GuangzhouOpenWorldApp.swift  LaunchView.swift  MainMenuView.swift  RootView.swift
MacApp/Tests/GuangzhouOpenWorldAppTests/: GuangzhouOpenWorldAppTests.swift
Plugins/: README.md
Plugins/JoltPhysics/: JoltPhysics.uplugin
Plugins/JoltPhysics/Docs/: JoltPhysics.md
Plugins/SoLoud/: SoLoud.uplugin
Plugins/SoLoud/Docs/: SoLoud2026.md
Scripts/: build-mac.sh  osm_crop_zhujiang_example.sh  run_mcp_selfcheck.py  sync_missions_json.sh  validate_mission_data.py
Scripts/ThirdPartyBuild/JoltPhysics/: CMakeLists.txt
Scripts/ThirdPartyBuild/SoLoud/: CMakeLists.txt
Scripts/macOS/: build-mac.sh  compile-metal-shaders.sh
Shaders/: LiquidGlass.usf
Shaders/MetalShaders/: ColorBleed.usf  LiquidGlass.usf  TSRSharpen.usf
Source/: GuangzhouOpenWorld.Target.cs  GuangzhouOpenWorldEditor.Target.cs
Source/GuangzhouOpenWorld/: GuangzhouOpenWorld.Build.cs  GuangzhouOpenWorld.cpp  GuangzhouOpenWorld.h
Source/GuangzhouOpenWorld/AI/: GZMassAI.cpp  GZMassAI.h  GZNavigationSystem.cpp  GZNavigationSystem.h
Source/GuangzhouOpenWorld/Adapter/: GZCVarAdapter.h  GZEOSAdapter.h  JoltVersionAdapter.h  (+1 more)
docs/audits/: ui-audit-001.md  ui-audit-002.md  ui-audit-003.md  ui-audit-004-story-mock.md
(+182 files in other folders)
